# HakTools

./: Dimensional.lhs  HakTools.cabal  README.md  Test.hs
Learning/: Perceptron.hs
Test/Learning/: Perceptron.hs
dynamic-range/: package.json  test.js
haskell/: GameTheory.hs  HakTools.cabal  README.md
haskell/src/Numeric/: Natural.lhs
haskell/test/Learning/: PerceptronProps.hs
haskell/test/Math/: CombinatoricsProps.hs
src/Algorithms/: GameTheory.hs
src/Data/: ListUtils.hs
src/Learning/: Perceptron.hs
src/Math/: Combinatorics.hs
test/: Test.hs
test/Math/: .CombinatoricsProps.hs.swp
