-- Cabal build file for raisdead's tools

name:                HakTools
version:             0.0.0.0
synopsis:            Tools that I wrote in haskell. Things such as homework and other learnings.
-- description:         
homepage:            http://www.github.com/raisdead/HakTools
license:             MIT
license-file:        LICENSE
author:              Raisdead
maintainer:          raisdead@gmail.com
stability:           experimental
bug-reports:         https://github.com/raisdead/HakTools/issues
-- copyright:           
category:            Algorithms
build-type:          Simple
cabal-version:       >=1.8

library
  hs-source-dirs:    src
  exposed-modules:   Learning.Perceptron
  build-depends:     base == 4.6.*, hmatrix == 0.15.0.1

